--- a/app/globals.css
+++ b/app/globals.css
@@ -17,11 +17,8 @@
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  background-color: #2d3748; /* bg-gray-800 en TailwindCSS */
+  color: white; /* Asegúrate de que el texto sea visible sobre el fondo oscuro */
+  margin: 0;
+  font-family: Arial, sans-serif; /* O el que prefieras */
 }
